src/main/java/com/example/todo/config/errors/BusinessException.java
package com.example.todo.config.errors;

public class BusinessException extends RuntimeException{
    public BusinessException(String message) {
        super(message);
    }
}
